# monkey

./: .gitignore  .travis.yml  BRANCH_TODO.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.txt  DEBUG  HowItUsedToWork.txt  HowItWorks.txt  INSTALL  MODULES  Makefile  README  README.md  STREAMS.md  TLS.md  TODO  configure  debian.sh  monkey.init  monkey.pxd  monkey.pyx  monkey.service  monkey.spec  monkeyd.1  roadmap_v1.3.txt  setup.py
api/: CMakeLists.txt  test.c
htdocs/: 404.html  CMakeLists.txt  index.html  index.html~
htdocs/docs/: monkey+php.1337.html  monkey+php.en.html  monkey+php.es.html  monkey+php.fr.html  monkey+php.pl.html  monkey+php.pt-br.html  monkey+php.ru.html  monkey+php.sv.html
htdocs/imgs/: .footer  .header
htdocs/php/: index.php
include/: CMakeLists.txt
include/monkey/: libmonkey.h  mk_api.h  mk_cache.h  mk_cache_tls.h  mk_clock.h  mk_config.h  mk_connection.h  mk_core.h  mk_env.h.in  mk_epoll.h  mk_event.h  mk_event_epoll.h  mk_event_kqueue.h  mk_fifo.h  mk_file.h  mk_header.h  mk_http.h  mk_http2.h  mk_http2_settings.h  mk_http_internal.h  mk_http_parser.h  mk_http_status.h  mk_http_thread.h  mk_info.h.in  mk_iov.h  mk_kernel.h  mk_lib.h  mk_limits.h  mk_linuxtrace.h  mk_list.h  mk_macros.h  mk_memory.h  mk_method.h  mk_mimetype.h  mk_net.h  mk_plugin.h  mk_plugin_net.h  mk_plugin_stage.h  mk_rconf.h  mk_request.h  (+16 more)
include/monkey/mk_core/: mk_core_info.h  mk_core_info.h.in  mk_dep_unistd.h  mk_event.h  mk_event_win32.h  mk_iov.h  mk_list.h  mk_macros.h  mk_rconf.h  mk_string.h  mk_uio.h  mk_utils.h
plugins/: API.txt  CMakeLists.txt  Make.common  Make.static  README  api.txt
plugins/auth/: CMakeLists.txt  Makefile.in  auth.c  auth.h  base64.c  conf.c  conf.h  mk_passwd.c
plugins/auth/tools/: CMakeLists.txt  Makefile.in  mk_passwd.c
plugins/cgi/: ABOUT  Makefile.in  README  cgi.c  cgi.h  event.c  request.c
plugins/cgi/conf/: CMakeLists.txt  cgi.conf
plugins/cheetah/: CMakeLists.txt  Makefile  Makefile.in  cheetah.c  cheetah.h  cmd.c  cmd.h  cutils.c  cutils.h  loop.c  loop.h
plugins/cheetah/conf/: cheetah.conf
plugins/dirlisting/: CMakeLists.txt  Makefile  Makefile.in  dirlisting.c  dirlisting.h
plugins/dirlisting/conf/: CMakeLists.txt
plugins/duda/: Makefile.in  README  api.c  api.h  body_buffer.c  body_buffer.h  conf.c  conf.h  debug.c  debug.h  duda.c  duda.h  duda_api.c  duda_api.h  duda_conf.c  duda_conf.h  duda_console.c  duda_console.h  duda_cookie.c  duda_cookie.h  duda_global.c  duda_global.h  duda_package.h  duda_param.c  duda_param.h  duda_queue.c  duda_queue.h  duda_sendfile.h  duda_session.c  duda_session.h  event.c  event.h  queue.c  queue.h  request.h  webservice.c  webservice.h
plugins/duda/conf/: duda.conf
plugins/duda/crypto/: Makefile.in  base64.c  base64.h
plugins/duda/example/: Makefile  Makefile.in  hello.c
plugins/duda/json/: Makefile.in  json.h
plugins/duda/src/: Makefile.in  duda.c  duda.h  duda_api.c  duda_api.h  duda_body_buffer.c  duda_conf.h  duda_console.c  duda_console.h  duda_cookie.c  duda_cookie.h  duda_event.c  duda_global.h  duda_package.c  duda_queue.c  duda_queue.h  duda_sendfile.c  duda_session.c  duda_session.h  duda_time.c  duda_time.h  duda_utils.c  duda_utils.h  duda_utime.c  duda_utime.h  duda_xtime.c  duda_xtime.h  webservice.h
plugins/fastcgi/: CMakeLists.txt  Makefile.in  chunk.c  dbg.h  fastcgi.c  fastcgi.h  fcgi_config.c  fcgi_context.c  fcgi_context.h  fcgi_env.c  fcgi_env.h  fcgi_fd.c  fcgi_fd.h  fcgi_handler.c  fcgi_handler.h  protocol.c  protocol.h  request.c
plugins/fastcgi/conf/: fastcgi.conf
plugins/liana/: ABOUT  Makefile  Makefile.in  liana.c
plugins/liana_ipv6/: Makefile.in  liana_ipv6.c
plugins/liana_ssl/: ABOUT  Makefile.in  README  liana_ssl.c  liana_ssl.h
plugins/liana_ssl/conf/: liana_ssl.conf
plugins/logger/: CMakeLists.txt  Makefile.in  logger.c  logger.h  pointers.c  pointers.h
plugins/logger/conf/: logger.conf
plugins/mandril/: CMakeLists.txt  Makefile.in  mandril.c  mandril.h
plugins/mandril/conf/: mandril.conf
plugins/mbedtls/: ABOUT  Makefile.in  mbedtls.c
plugins/palm/: ABOUT  Makefile  Makefile.in  README  cgi.c  cgi.h  palm.c  palm.h  protocol.c  protocol.h  request.c  request.h
plugins/patas/: ABOUT  Makefile.in  connection.c  connection.h  patas.c  patas.h
plugins/patas/conf/: patas.conf
plugins/polarssl/: Makefile.in  polarssl.c
plugins/proxy/: ABOUT  Makefile.in  proxy.c  proxy.h  proxy_backend.c  proxy_backend.h  proxy_conf.c  proxy_conf.h  proxy_event.c  proxy_handler.c  proxy_handler.h  proxy_network.c  proxy_network.h
plugins/proxy_reverse/: ABOUT  balancer.c  balancer.h  config.c  config.h  dictionary.c  proxy.c  string.c  types.h
plugins/security/: ABOUT  Makefile  Makefile.in  README  security.c  security.h
plugins/tls/: CMakeLists.txt  Makefile.in  tls.c
plugins/websockets/: Makefile.in  README  echo.c  echo.h  request.c  request.h  ws.c  ws.h
src/: CMakeLists.txt  cache.c  cgi.c  chars.c  cheetah.c  clock.c  config.c  conn_switch.c  connection.c  deny.c  dir_html.c  epoll.c  file.c  header.c  http.c  iov.c  ldderror.txt  logfile.c  memory.c  method.c  mimetype.c  mk_cache.c  mk_clock.c  mk_common.c  mk_config.c  mk_connection.c  mk_epoll.c  mk_event.c  mk_event_epoll.c  mk_event_kqueue.c  mk_file.c  mk_header.c  mk_http.c  mk_http_parser.c  mk_iov.c  mk_kernel.c  mk_lib.c  mk_memory.c  mk_method.c  mk_mimetype.c  (+30 more)
src/extras/: README  cleanmods.sh
src/extras/mod_mysql/: INSTALL  (+6 more)
src/include/: MKPlugin.h  cache.h  cgi.h  chars.h  cheetah.h  clock.h  config.h  conn_switch.h  connection.h  deny.h  dir_html.h  epoll.h  file.h  header.h  http.h  http_status.h  iov.h  limits.h  list.h  logfile.h  macros.h  memory.h  method.h  mimetype.h  mk_cache.h  mk_clock.h  mk_common.h  mk_config.h  mk_connection.h  mk_epoll.h  mk_file.h  mk_header.h  mk_http.h  mk_http_status.h  mk_iov.h  mk_kernel.h  mk_lib.h  mk_limits.h  mk_linuxtrace.h  mk_linuxtrace_provider.h  (+36 more)
src/mk_core/: CMakeLists.txt  mk_core.h  mk_event.c  mk_event_kqueue.c  mk_utils.c
tls/: CMakeLists.txt  tls_mbedtls.c  tls_openssl.c
(+203 files in other folders)
